fix: z-index bug

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -65,3 +65,6 @@
     @apply border-customwidth border-customcolor;
   }
 }
+.sk-ai-service-module-assistant-expanded {
+  z-index: 10;
+}
